// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Meetings/Webex Meeting Control Bar In Meeting 1`] = `
Array [
  <div
    className="wxc-meeting-control-bar"
  >
    <button
      alt="Mute"
      aria-label="Mute"
      aria-pressed={null}
      className="md-button md-button--circle md-button--56 wxc-meeting-control"
      data-md-event-key="md-button-0"
      disabled={false}
      id="md-button-0"
      onClick={[Function]}
      onKeyDown={[Function]}
      style={
        Object {
          "style": Object {},
        }
      }
      tabIndex={0}
      type="button"
    >
      <span
        className="md-button__children"
        style={
          Object {
            "opacity": "1",
          }
        }
      >
        <i
          aria-label={null}
          className="md-icon icon icon-microphone-muted_28"
          style={
            Object {
              "fontSize": 28,
            }
          }
        />
      </span>
    </button>
    <button
      alt="Stop video"
      aria-label="Stop video"
      aria-pressed={null}
      className="md-button md-button--circle md-button--56 wxc-meeting-control"
      data-md-event-key="md-button-0"
      disabled={false}
      id="md-button-0"
      onClick={[Function]}
      onKeyDown={[Function]}
      style={
        Object {
          "style": Object {},
        }
      }
      tabIndex={0}
      type="button"
    >
      <span
        className="md-button__children"
        style={
          Object {
            "opacity": "1",
          }
        }
      >
        <i
          aria-label={null}
          className="md-icon icon icon-camera-muted_28"
          style={
            Object {
              "fontSize": 28,
            }
          }
        />
      </span>
    </button>
    <button
      alt="Stop Sharing"
      aria-label="Stop Sharing"
      aria-pressed={null}
      className="md-button md-button--circle md-button--56 md-button--red wxc-meeting-control"
      data-md-event-key="md-button-0"
      disabled={false}
      id="md-button-0"
      onClick={[Function]}
      onKeyDown={[Function]}
      style={
        Object {
          "style": Object {},
        }
      }
      tabIndex={0}
      type="button"
    >
      <span
        className="md-button__children"
        style={
          Object {
            "opacity": "1",
          }
        }
      >
        <i
          aria-label={null}
          className="md-icon icon icon-share-screen-presence-stroke_26"
          style={
            Object {
              "fontSize": 28,
            }
          }
        />
      </span>
    </button>
    <button
      alt="Leave"
      aria-label="Leave"
      aria-pressed={null}
      className="md-button md-button--circle md-button--56 md-button--red wxc-meeting-control"
      data-md-event-key="md-button-0"
      disabled={false}
      id="md-button-0"
      onClick={[Function]}
      onKeyDown={[Function]}
      style={
        Object {
          "style": Object {},
        }
      }
      tabIndex={0}
      type="button"
    >
      <span
        className="md-button__children"
        style={
          Object {
            "opacity": "1",
          }
        }
      >
        <i
          aria-label={null}
          className="md-icon icon icon-cancel_28"
          style={
            Object {
              "fontSize": 28,
            }
          }
        />
      </span>
    </button>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex Meeting Control Bar Interstitial 1`] = `
Array [
  <div
    className="wxc-meeting-control-bar"
  >
    <button
      alt="Mute"
      aria-label="Mute"
      aria-pressed={null}
      className="md-button md-button--circle md-button--56 wxc-meeting-control"
      data-md-event-key="md-button-0"
      disabled={false}
      id="md-button-0"
      onClick={[Function]}
      onKeyDown={[Function]}
      style={
        Object {
          "style": Object {},
        }
      }
      tabIndex={0}
      type="button"
    >
      <span
        className="md-button__children"
        style={
          Object {
            "opacity": "1",
          }
        }
      >
        <i
          aria-label={null}
          className="md-icon icon icon-microphone-muted_28"
          style={
            Object {
              "fontSize": 28,
            }
          }
        />
      </span>
    </button>
    <button
      alt="Stop video"
      aria-label="Stop video"
      aria-pressed={null}
      className="md-button md-button--circle md-button--56 wxc-meeting-control"
      data-md-event-key="md-button-0"
      disabled={false}
      id="md-button-0"
      onClick={[Function]}
      onKeyDown={[Function]}
      style={
        Object {
          "style": Object {},
        }
      }
      tabIndex={0}
      type="button"
    >
      <span
        className="md-button__children"
        style={
          Object {
            "opacity": "1",
          }
        }
      >
        <i
          aria-label={null}
          className="md-icon icon icon-camera-muted_28"
          style={
            Object {
              "fontSize": 28,
            }
          }
        />
      </span>
    </button>
    <button
      alt="Join meeting"
      aria-label="Join meeting"
      aria-pressed={null}
      className="md-button md-button--52 md-button--green wxc-meeting-control"
      data-md-event-key="md-button-0"
      data-md-keyboard-key="join-meeting"
      disabled={false}
      id="md-button-0"
      onClick={[Function]}
      onKeyDown={[Function]}
      style={
        Object {
          "style": Object {},
        }
      }
      tabIndex={0}
      type="button"
    >
      <span
        className="md-button__children"
        style={
          Object {
            "opacity": "1",
          }
        }
      >
        Join meeting
      </span>
    </button>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;
